# babel

./: .coafile  .coverage  .coveragerc  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yml  .rultor.yml  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  CONTRIBUTING  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL.txt  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  ReadMe-Korean.md  SECURITY.md  conftest.py  hatch_build.py  parsing_string.py  pyproject.toml  python.py  setup.cfg  setup.py  test.py  test_date.py  tox.ini
.ci/: appveyor.yml  deploy.linux.sh  deploy.osx.sh  deps.linux.sh  deps.osx.sh  run_with_env.cmd
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  python-test.yml  security.yml  test.yml
babel/: __init__.py  _compat.py  _memoized.py  branch_struct.py  compat.py  core.py  dates.py  languages.py  lists.py  localedata.py  numbers.py  pi_support.py  plural.py  py.typed  rbnf.py  spelling.py  support.py  units.py  util.py
babel/Exceptions/: ParseDateException.py  ParseTimeException.py
babel/catalog/: __init__.py  extract.py  frontend.py  pofile.py
babel/catalog/tests/: __init__.py  extract.py  frontend.py  pofile.py
babel/localedata/: .dummy  .gitignore  __init__.py
babel/localtime/: __init__.py  _fallback.py  _helpers.py  _unix.py  _win32.py
babel/messages/: __init__.py  _compat.py  block_utils.py  catalog.py  catalog_parser.py  checkers.py  extract.py  frontend.py  frontend_coveragetool.py  gvar.py  jslexer.py  mofile.py  msg_parser.py  operations.py  parse_utils.py  plurals.py  pofile.py  poparse.py  setuptools_frontend.py
babel/messages/tests/: __init__.py  catalog.py  checkers.py  extract.py  frontend.py  mofile.py  pofile.py  test_frontend.py
babel/messages/tests/data/: mapping.cfg  setup.cfg  setup.py
babel/messages/tests/data/project/: mapping.cfg
babel/numbers/: __init__.py
babel/numbers/_spelling/: __init__.py  exceptions.py  locale_en.py  locale_hu.py  utils.py
babel/tests/: __init__.py  core.py  dates.py  localedata.py  numbers.py  plural.py  support.py  test_dates.py  test_support.py  util.py
cldr/: .gitignore
contrib/: babel.js
doc/: Makefile  catalogs.txt  cmdline.txt  conf.py  dates.rst  dates.txt  display.rst  display.txt  docutils.conf  epydoc.conf  formatting.txt  index.rst  index.txt  intro.rst  intro.txt  make.bat  messages.rst  messages.txt  numbers.rst  numbers.txt  setup.rst  setup.txt  support.rst  support.txt
doc/_themes/babel/: theme.conf
doc/_themes/babel/static/: small_babel.css
doc/api/: babel.core.rst  babel.localedata.rst  babel.messages.extract.rst  babel.messages.frontend.rst  babel.messages.rst  babel.numbers.rst
doc/style/: edgewall.css  epydoc.css
docs/: Makefile  cmdline.rst  concat_merge_usage.rst  conf.py  dates.rst  dev.rst  display.rst  index.rst  installation.rst  intro.rst  license.rst  locale.rst  messages.rst  numbers.rst  requirements.txt  setup.rst
docs/_templates/: sidebar-about.html  sidebar-links.html
docs/_themes/: LICENSE
docs/_themes/babel/: layout.html
docs/_themes/babel/static/: babel.css_t  small_babel.css
docs/api/: babel.dates.rst  babel.messages.catalog.rst  babel.messages.checkers.rst  babel.messages.mofile.rst  babel.messages.plurals.rst  babel.messages.pofile.rst  babel.support.rst  babel.util.rst  core.rst  dates.rst  index.rst  index_PT.rst  languages.rst  lists.rst  messages.rst  numbers.rst  plural.rst  support.rst  units.rst
docs/api/messages/: catalog.rst  extract.rst  index.rst  mofile.rst  pofile.rst
misc/icu4c-tools/: Makefile  README.md  icu4c_date_format.cpp
scripts/: download_import_cldr.py  dump_data.py  dump_global.py  generate_authors.py  import_cldr.py  make-release.py
tests/: __init__.py  conftest.py  test_core.py  test_date_intervals.py  test_dates.py  test_day_periods.py  test_exceptions.py  test_languages.py  test_lists.py  test_localedata.py  test_localtime.py  test_number_spelling.py  test_numbers.py  test_numbers_parsing.py  test_parse.py  test_plural.py  test_smoke.py  test_spelling.py  test_support.py  test_support_translations.py  test_units.py  test_util.py
tests/interop/: test_jinja2_interop.py
tests/messages/: .test_jslexer.py.swo  __init__.py  consts.py  test_catalog.py  test_checkers.py  test_extract.py  test_extract_python.py  test_frontend.py  test_js_extract.py  test_jslexer.py  test_mofile.py  test_normalized_string.py  test_plurals.py  test_pofile.py  test_pofile_read.py  test_pofile_write.py  test_setuptools_frontend.py  test_toml_config.py  utils.py
tests/messages/data/: mapping_with_keywords.cfg  mapping_with_keywords_and_comments.toml
tests/messages/data/project/: file1.py  file2.py  issue_1224_test.py
tests/messages/data/project/_hidden_by_default/: hidden_file.py
tests/messages/data/project/i18n/: messages.pot  (+1 more)
tests/messages/frontend/: test_cli.py  test_compile.py  test_extract.py  test_frontend.py  test_init.py
tests/numbers/: test_numbers.py
tests/numbers/spelling/: test_framework.py  test_locale_en.py  test_locale_hu.py
tests/rbnf_test_cases/: _template.toml  _utils.py  af.toml  ak.toml  am.toml  ar.toml  az.toml  be.toml  bg.toml  bs.toml  ca.toml  ccp.toml  chr.toml  cs.toml  cy.toml  da.toml  de.toml  de_CH.toml  ee.toml  el.toml  en.toml  en_001.toml  en_IN.toml  eo.toml  es.toml  es_419.toml  et.toml  fa.toml  fa_AF.toml  ff.toml  fi.toml  fil.toml  fo.toml  fr.toml  fr_BE.toml  fr_CH.toml  ga.toml  gu.toml  he.toml  hi.toml  (+52 more)
(+7 files in other folders)
