[aliases]
release = sdist bdist_wheel

[tool:pytest]
norecursedirs = venv* .* _* scripts {args}
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
markers =
    all_locales: parameterize test with all locales

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
