[aliases]
release = sdist bdist_wheel

[tool:pytest]
norecursedirs = venv* .* _* scripts {args}
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
markers =
    all_locales: parameterize test with all locales
filterwarnings =
    # The doctest for format_number would raise this, but we don't really want to see it.
    ignore:babel.numbers.format_decimal:DeprecationWarning

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
